[gd_scene load_steps=4 format=3 uid="uid://dj4tllxhbca4m"]

[ext_resource type="Script" path="res://Code/Menu.gd" id="1_dqyfk"]
[ext_resource type="FontFile" uid="uid://clil83boeaw8b" path="res://Assets/Fonts/VarelaRound-Regular.ttf" id="1_xn1sm"]
[ext_resource type="Theme" uid="uid://b7uo6ye5ipng8" path="res://Resources/Themes/MenuButtonTheme.tres" id="2_yqu75"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 960.0
offset_bottom = 540.0
script = ExtResource("1_dqyfk")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer"]
layout_mode = 2

[node name="Layout" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Layout"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/Layout/VBoxContainer"]
clip_contents = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
theme_override_fonts/normal_font = ExtResource("1_xn1sm")
theme_override_font_sizes/normal_font_size = 69
bbcode_enabled = true
text = "[center]Chess 2
"
fit_content = true

[node name="Buttons" type="VBoxContainer" parent="MarginContainer/Layout/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme = ExtResource("2_yqu75")

[node name="Play" type="Button" parent="MarginContainer/Layout/VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 3
text = "Play"
flat = true

[node name="Settings" type="Button" parent="MarginContainer/Layout/VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 3
text = "Settings"
flat = true

[node name="Quit" type="Button" parent="MarginContainer/Layout/VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 3
text = "Quit"
flat = true

[node name="VersionLabel" type="RichTextLabel" parent="MarginContainer/Layout/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
size_flags_stretch_ratio = 0.5
text = "v0.0.1"
fit_content = true

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="pressed" from="MarginContainer/Layout/VBoxContainer/Buttons/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/Layout/VBoxContainer/Buttons/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MarginContainer/Layout/VBoxContainer/Buttons/Quit" to="." method="_on_quit_pressed"]
